# python.pizza.2020-project

./: manage.py  pyproject.toml
aggregation_test/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_data.py
core/templates/core/: index.html
core/templatetags/: sql.py
core/utils/: db.py
